force-app/main/default/objects/OrderItemMonthlyPlans__c/OrderItemMonthlyPlans__c.object-meta.xml
<CustomObject>
    <label>OrderItem Monthly Plans</label>
    <nameField>
        <label>OrderItem Monthly Plans Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderItem Monthly Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>