force-app/main/default/objects/OrderItemMonthlyPlans__c/fields/BalanceForProduction__c.field-meta.xml
<CustomField>
    <fullName>BalanceForProduction__c</fullName>
    <label>Balance for production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>