force-app/main/default/objects/OrderItemMonthlyPlans__c/fields/EstimatedProdBalance__c.field-meta.xml
<CustomField>
    <fullName>EstimatedProdBalance__c</fullName>
    <formula>IF(BalanceForProduction__c &gt;= MonthlyProdPlan__c, BalanceForProduction__c - MonthlyProdPlan__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Prod Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>