force-app/main/default/objects/OrderItemMonthlyPlans__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Prod. Plan Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Січень</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Лютий</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Березень</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Квітень</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Травень</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Червень</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Липень</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Серпень</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Вересень</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Жовтень</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Листопад</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Грудень</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>