force-app/main/default/objects/OrderItemMonthlyPlans__c/fields/MonthlyProdPlan__c.field-meta.xml
<CustomField>
    <fullName>MonthlyProdPlan__c</fullName>
    <label>Monthly Prod. Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>