force-app/main/default/objects/OrderItemMonthlyPlans__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>OrderItem Monthly Plans</relationshipLabel>
    <relationshipName>OrderItem_Monthly_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>