force-app/main/default/objects/OrderItemMonthlyPlans__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>OrderItem Monthly Plans</relationshipLabel>
    <relationshipName>OrderItem_Monthly_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>