force-app/main/default/objects/OrderItemMonthlyPlans__c/fields/ProdName__c.field-meta.xml
<CustomField>
    <fullName>ProdName__c</fullName>
    <formula>Order_Item__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod. Name</label>
    <type>Text</type>
</CustomField>