force-app/main/default/objects/OrderItemMonthlyPlans__c/fields/ProdWeek__c.field-meta.xml
<CustomField>
    <fullName>ProdWeek__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProdWeek</label>
    <referenceTo>ProdWeeksH__c</referenceTo>
    <relationshipLabel>OrderItem Monthly Plans</relationshipLabel>
    <relationshipName>OrderItem_Monthly_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>