force-app/main/default/objects/OrderItemMonthlyPlans__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Prod. Plan Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>